; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniupnpc.c_is_rfc1918addr.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniupnpc.c_is_rfc1918addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"192.168.\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"10.\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"172.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_rfc1918addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_rfc1918addr(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @COMPARE(i8* %5, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %30

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @COMPARE(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 1, i32* %2, align 4
  br label %30

14:                                               ; preds = %9
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @COMPARE(i8* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %29

18:                                               ; preds = %14
  %19 = load i8*, i8** %3, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 4
  %21 = call i32 @atoi(i8* %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp sle i32 16, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %18
  %25 = load i32, i32* %4, align 4
  %26 = icmp sle i32 %25, 31
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i32 1, i32* %2, align 4
  br label %30

28:                                               ; preds = %24, %18
  br label %29

29:                                               ; preds = %28, %14
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %27, %13, %8
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @COMPARE(i8*, i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
